fixed background overlap with background size and position in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
 /* form container */
 .container{
   background: url(/assets/images/low-poly-grid-haikei\ \(3\).png);
+  background-position: center center;
+  background-size: cover;
 }
 /* button utilities */
 .delete-btn{
